# real-mente

./: .gitignore  docker-compose.yaml  package-lock.json  package.json
api/: .gitignore  Cargo.toml  Dockerfile  test.http
api/src/: db.rs  main.rs  models.rs
api/src/routes/: auth.rs  materias.rs  mod.rs  payments.rs  proveedores.rs  users.rs
front-end/real-mente/: package-lock.json  package.json
front-end/real-mente/public/: index.html
front-end/real-mente/src/: App.js  App.jsx  Rotas.js  Rotas.jsx  index.js
front-end/real-mente/src/components/: Footer.jsx  Header.css  Header.jsx  MainLayout.jsx
front-end/real-mente/src/pages/: Home.js
mercadopago/: Dockerfile  main.py  requirements.txt
website/: Dockerfile  index.html  package-lock.json  package.json
website/public/: index.html  manifest.json
website/src/: App.js  App.tsx  helpers.js  helpers.ts  index.css  index.js  types.ts
website/src/components/: CardDestino.css  CardDestino.jsx  CardDestino.tsx  Footer.css  Footer.jsx  Footer.tsx  Header.css  Header.jsx  Header.tsx  LinhaOfertasMateria.css  LinhaOfertasMateria.jsx  LinhaOfertasMateria.tsx  MainLayout.css  MainLayout.jsx  MainLayout.tsx
website/src/pages/cadastro/: Cadastro.css  Cadastro.jsx  Cadastro.tsx
website/src/pages/cenario/: Cenario.jsx
website/src/pages/comoFunciona/: ComoFunciona.css  ComoFunciona.jsx  ComoFunciona.tsx
website/src/pages/escolhaDestino/: EscolhaDestino.css  EscolhaDestino.jsx  EscolhaDestino.tsx
website/src/pages/home/: Home.css  Home.jsx  Home.tsx
website/src/pages/login/: Login.css  Login.jsx  Login.tsx
(+24 files in other folders)
