[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenv = "0.15.0"
mongodb = "3.2.3"
reqwest = { version="0.12.23", features = ["json"]}
rocket = { version = "0.5.1", features = ["json"] }
rocket_cors = "0.6.0"
rocket_db_pools = { version = "0.2.0", features = ["mongodb"] }
